Made the page only load 10 objects at a time. Made a load more button for if there are more than 10 objects. Made everything fade correctly. Made all of the divs invisible at the start.

--- a/HaloHighlightsStyles.css
+++ b/HaloHighlightsStyles.css
@@ -37,3 +37,18 @@ h1
 {
 	float: left;
 }
+
+#search-container
+{
+	display: none;
+}
+
+#link-container
+{
+	display: none;
+}
+
+#loadMoreButton
+{
+	display: none;
+}
